--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-#page title
-page_title: # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+#page title:Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title:
 
 # App Info
 ios_app_id: 1557613279 # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 
 appstore_link: # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
-playstore_link: https://play.google.com/store/apps/details?id=com.qsfix.bycleparkNfc
+playstore_link: https://play.google.com/store/apps/details?id=com.qsfix.bicleparkNfc
 
 # Enter Google Play Store URL.
 # presskit_download_link                    : https://emilbaehr.com                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file).
